comment ansible dynamic inventory example

--- a/examples/wk06_demo/ansible/ansible.cfg
+++ b/examples/wk06_demo/ansible/ansible.cfg
@@ -1,10 +1,15 @@
 [defaults]
+# Define the default inventory location
+# the inventory directory in the directory of the playbook
 inventory = inventory
 stdout_callback = debug
 
 [inventory]
+# Define the plugins used to process the inventory
+# the amazon.aws.aws_ec2 plugin dynamically queries AWS for EC2 instances
 enable_plugins = yaml, ini, amazon.aws.aws_ec2
 
 [ssh_connection]
+# Set Ansible SSH to skip host key checking and not store host keys 
 host_key_checking = False
 ssh_common_args = -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
