--- a/examples/wk13_starter/app_configuration/ansible.cfg
+++ b/examples/wk13_starter/app_configuration/ansible.cfg
@@ -2,7 +2,7 @@
 [defaults]
 inventory = inventory
 stdout_callback = debug
-private_key_file = "../terraform/lab13.pem" 
+private_key_file = "./acit4640_lab13.pem" 
 remote_user = "ubuntu"
 remote_tmp = /tmp
 
